--- a/android/Android_Terminal_Emulator/app/build.gradle
+++ b/android/Android_Terminal_Emulator/app/build.gradle
@@ -20,7 +20,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile files('src/main/java/com/example/grzegorz/androidterminalemulator/commons-net-3.3.jar')
+    compile files('src/main/java/com/example/grzegorz/androidterminalemulator/dns/guava-18.0.jar')
 }
