--- a/android/Android_Terminal_Emulator/app/build.gradle
+++ b/android/Android_Terminal_Emulator/app/build.gradle
@@ -17,6 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 dependencies {
@@ -24,4 +29,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile files('src/main/java/com/example/grzegorz/androidterminalemulator/commons-net-3.3.jar')
     compile files('src/main/java/com/example/grzegorz/androidterminalemulator/dns/guava-18.0.jar')
+    compile files('src/main/java/com/example/grzegorz/androidterminalemulator/commons-cli-1.3.1.jar')
+    compile files('src/main/java/com/example/grzegorz/androidterminalemulator/netstat/commons-cli-1.3.1.jar')
 }
