--- a/android/Android_Terminal_Emulator/app/build.gradle
+++ b/android/Android_Terminal_Emulator/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile files('src/main/java/com/example/grzegorz/androidterminalemulator/dns/guava-18.0.jar')
     compile files('src/main/java/com/example/grzegorz/androidterminalemulator/commons-cli-1.3.1.jar')
     compile files('src/main/java/com/example/grzegorz/androidterminalemulator/netstat/commons-cli-1.3.1.jar')
+    compile files('src/main/java/com/example/grzegorz/androidterminalemulator/commons-io-2.4.jar')
 }
